# statement-downloader

./: LICENSE  README.md  entry.py  pyproject.toml
src/: app.py  app.tcss  browser.py  default_procedure_snippet.py  editor.tcss  env.py  main.py  utils.py
src/screens/: edit_procedure.py  new_procedure.py  snapshot_new_procedure.py
src/widgets/: confirm_dialog.py  editor.py
