[tool.poetry]
name = "statement-downloader"
version = "0.1.0"
description = ""
authors = ["Noah May <noahmouse2011@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
state_dl = "src.main:main"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.35.0"
textual = {extras = ["dev"], version = "^0.28.1"}


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.274"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
