[tool.poetry]
name = "statement_downloader"
version = "0.1.0"
description = ""
authors = ["Noah May <noahmouse2011@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
state_dl = "src.main:main"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.35.0"
textual = {extras = ["dev"], version = "^0.28.1"}
rich = "^13.4.2"
pydantic = "^2.1.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.274"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 95

[tool.black]
line-length = 95
